<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MealScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/logo"
            android:textSize="30sp" />

    </LinearLayout>

    <SearchView
        android:id="@+id/search_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </SearchView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="590dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_meal"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="86dp"
                android:layout_height="92dp"
                android:layout_weight="0"
                android:contentDescription="@string/food_image"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

            <TextView
                android:id="@+id/food_name1"
                android:layout_width="226dp"
                android:layout_height="69dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:background="@drawable/circle_right"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/arrow_right_white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>